--- a/mindsweeper.html
+++ b/mindsweeper.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="./stylesheets/mine_sweeper.css">
   <script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
   <script type="text/javascript" src="./board.js"></script>
+  <script type="text/javascript" src="./spot.js"></script>
   <script type="text/javascript" src="./mine_sweeper.js"></script>
 </head>
 <body>
