--- a/mindsweeper.html
+++ b/mindsweeper.html
@@ -7,8 +7,8 @@
   <script type="text/javascript" src="./board.js"></script>
   <script type="text/javascript" src="./mine_sweeper.js"></script>
 </head>
-<body>
+<body oncontextmenu="return false;">
   <h1>Mine Sweeper</h1>
-
+  <div id="game-div"></div>
 </body>
 </html>
