--- a/mindsweeper.html
+++ b/mindsweeper.html
@@ -8,17 +8,19 @@
   <script type="text/javascript" src="./mine_sweeper.js"></script>
 </head>
 <body oncontextmenu="return false;">
-  <h1>Mine Sweeper</h1>
-  <div id="settings-form">
-    <form>
-      <input type="number" min="3" max="30" placeholder="board size,  ie: 10" id="size">
-      <select name="difficulty" id="difficulty">
-        <option value="easy">Easy</option>
-        <option value="medium">Medium</option>
-        <option value="hard">Hard</option>
-      </select>
-      <input type="submit" value="start">
-    </form>
+  <div class="menu">
+    <h1>Mine Sweeper</h1>
+    <div id="settings-form">
+      <form>
+        <input type="number" min="3" max="30" placeholder="board size,  ie: 10" id="size">
+        <select name="difficulty" id="difficulty">
+          <option value="easy">Easy</option>
+          <option value="medium">Medium</option>
+          <option value="hard">Hard</option>
+        </select>
+        <input type="submit" value="start">
+      </form>
+    </div>
   </div>
   <div id="game-div"></div>
 </body>
