--- a/mindsweeper.html
+++ b/mindsweeper.html
@@ -12,7 +12,7 @@
     <h1>Mine Sweeper</h1>
     <div id="settings-form">
       <form>
-        <input type="number" min="3" max="30" placeholder="board size,  ie: 10" id="size">
+        <input type="number" min="3" max="30" placeholder="board size,  ie: 10" id="size" value=5>
         <select name="difficulty" id="difficulty">
           <option value="easy">Easy</option>
           <option value="medium">Medium</option>
