imported jasmine and normalize.css

--- a/mindsweeper.html
+++ b/mindsweeper.html
@@ -2,10 +2,11 @@
 <html>
 <head>
   <title>Mine Sweeper</title>
+  <link rel="stylesheet" href="./node_modules/normalize.css/normalize.css">
   <link rel="stylesheet" href="./stylesheets/mine_sweeper.css">
   <script   src="https://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
-  <script type="text/javascript" src="./board.js"></script>
-  <script type="text/javascript" src="./mine_sweeper.js"></script>
+  <script type="text/javascript" src="./public/javascripts/board.js"></script>
+  <script type="text/javascript" src="./public/javascripts/mine_sweeper.js"></script>
 </head>
 <body oncontextmenu="return false;">
   <div class="menu">
